--- a/src/components/utils/Task/Task.module.scss
+++ b/src/components/utils/Task/Task.module.scss
@@ -49,7 +49,13 @@
             }
         }
     }
-    .imageArea{
+    .actionsArea{
         cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        img{
+            margin-left: 15px;
+        }
     }
 }
