--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -21,4 +21,26 @@
         color: rgb(65, 59, 59);
         font-weight: 300;
     }
+    .buttonArea{
+        display: flex;
+        justify-content: end;
+        margin-bottom: 40px;
+
+        button{
+            padding: 8px 25px;
+            cursor: pointer;
+            border-radius: 10px;
+            border: 0;
+            background-color: var(--details-color);
+            color: var(--content-color);
+            box-shadow: 3px 3px 3px rgb(77, 75, 75);
+            font-weight: 700;
+
+            &:hover{
+                transition: 0.5s;
+                background-color: rgb(77, 75, 75);
+                color: var(--details-color);
+            }
+        }
+    }
 }
