--- a/src/components/utils/Modal/Modal.module.scss
+++ b/src/components/utils/Modal/Modal.module.scss
@@ -14,6 +14,7 @@
         width: 90%;
         background-color: var(--content-color);
         box-shadow: 1px 1px 5px var(--shadow-color);
+        max-width: 1400px;
     }
     .modal_header{
         h3{
